--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,17 +28,6 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
   margin: 0;
   line-height: 1.15;
@@ -113,4 +102,16 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.button {
+  background: #2996e3;
+  color: #fff;
+  transition: 0.3s;
+  border-radius: 2.5px;
+}
+
+.button:hover {
+  color: #777;
+  border-color: #777;
 }
