--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,17 @@
-html,
-body {
+* {
+  box-sizing: border-box;
+}
+
+html, body {
   padding: 0;
   margin: 0;
+  background: #53aded;
+  color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
+  color: #555;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
