--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -71,7 +71,7 @@
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition: color 0.3s ease, border-color 0.3s ease;
   max-width: 300px;
 }
 
@@ -118,4 +118,5 @@
 .button:hover { 
   opacity: 1;
   cursor: pointer;
+  transform: scale(1.15, 1.15);
 }
